@@ -59,6 +59,7 @@ import java.util.List;
 import java.util.Map.Entry;
 import java.util.Set;
 import java.util.TimeZone;
+import org.apache.commons.logging.Log;
 import org.json.JSONArray;
 import org.json.JSONException;
 import org.json.JSONObject;
@@ -95,6 +96,7 @@ import com.openexchange.session.Session;
  */
 public class ContactMapper extends DefaultJsonMapper<Contact, ContactField> {
 
+    private static final Log LOG = com.openexchange.log.Log.loggerFor(ContactMapper.class);
     private static final ContactMapper INSTANCE = new ContactMapper();
     
     private ContactField[] allFields = null;
@@ -2714,8 +2716,8 @@ public class ContactMapper extends DefaultJsonMapper<Contact, ContactField> {
         mappings.put(ContactField.IMAGE1_URL, new StringMapping<Contact>(ContactFields.IMAGE1_URL, Contact.IMAGE1_URL) {
 
             @Override
-            public void set(Contact contact, String value) { 
-                throw new UnsupportedOperationException();
+            public void set(Contact contact, String value) {
+                LOG.debug("Ignoring request to set 'image_url' in contact to '" + value + "'.");
             }
 
             @Override
@@ -2744,7 +2746,7 @@ public class ContactMapper extends DefaultJsonMapper<Contact, ContactField> {
 
             @Override
             public void remove(Contact contact) { 
-                throw new UnsupportedOperationException();
+                LOG.debug("Ignoring request to remove 'image_url' from contact.");
             }
         });
 
