@@ -1,3 +1,7 @@
+* 2012-09-25 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 23083: Ignore requests to set the 'image1_url' of a contact
+
 * 2012-09-24 - thorben.betten@open-xchange.com
 
  - Fix for bug 23068: Fixed NPE on social/subscription refresh
